Stopped flickering when switching to grid

--- a/css/common.css
+++ b/css/common.css
@@ -204,7 +204,7 @@ img {
 } */
 
 .hidden {
-    display: none;
+    display: none !important;
 }
 /* #endregion */
 
